--- a/arch/riscv/boot/dts/sophgo/mango-2sockets.dtsi
+++ b/arch/riscv/boot/dts/sophgo/mango-2sockets.dtsi
@@ -216,180 +216,27 @@
 				>;
 		};
 
-		clint_mtimer16: clint-mtimer@70ac100000 {
-			compatible = "thead,c900-clint-mtimer";
-			reg = <0x00000070 0xac100000 0x00000000 0x00007ff8>;
-			interrupts-extended = <
-				&cpu64_intc 7
-				&cpu65_intc 7
-				&cpu66_intc 7
-				&cpu67_intc 7
-				>;
-		};
-
-		clint_mtimer17: clint-mtimer@70ac110000 {
-			compatible = "thead,c900-clint-mtimer";
-			reg = <0x00000070 0xac110000 0x00000000 0x00007ff8>;
-			interrupts-extended = <
-				&cpu68_intc 7
-				&cpu69_intc 7
-				&cpu70_intc 7
-				&cpu71_intc 7
-				>;
-		};
-
-		clint_mtimer18: clint-mtimer@70ac120000 {
-			compatible = "thead,c900-clint-mtimer";
-			reg = <0x00000070 0xac120000 0x00000000 0x00007ff8>;
-			interrupts-extended = <
-				&cpu72_intc 7
-				&cpu73_intc 7
-				&cpu74_intc 7
-				&cpu75_intc 7
-				>;
-		};
-
-		clint_mtimer19: clint-mtimer@70ac130000 {
-			compatible = "thead,c900-clint-mtimer";
-			reg = <0x00000070 0xac130000 0x00000000 0x00007ff8>;
-			interrupts-extended = <
-				&cpu76_intc 7
-				&cpu77_intc 7
-				&cpu78_intc 7
-				&cpu79_intc 7
-				>;
-		};
-
-		clint_mtimer20: clint-mtimer@70ac140000 {
-			compatible = "thead,c900-clint-mtimer";
-			reg = <0x00000070 0xac140000 0x00000000 0x00007ff8>;
-			interrupts-extended = <
-				&cpu80_intc 7
-				&cpu81_intc 7
-				&cpu82_intc 7
-				&cpu83_intc 7
-				>;
-		};
-
-		clint_mtimer21: clint-mtimer@70ac150000 {
-			compatible = "thead,c900-clint-mtimer";
-			reg = <0x00000070 0xac150000 0x00000000 0x00007ff8>;
-			interrupts-extended = <
-				&cpu84_intc 7
-				&cpu85_intc 7
-				&cpu86_intc 7
-				&cpu87_intc 7
-				>;
-		};
-
-		clint_mtimer22: clint-mtimer@70ac160000 {
-			compatible = "thead,c900-clint-mtimer";
-			reg = <0x00000070 0xac160000 0x00000000 0x00007ff8>;
-			interrupts-extended = <
-				&cpu88_intc 7
-				&cpu89_intc 7
-				&cpu90_intc 7
-				&cpu91_intc 7
-				>;
-		};
-
-		clint_mtimer23: clint-mtimer@70ac170000 {
-			compatible = "thead,c900-clint-mtimer";
-			reg = <0x00000070 0xac170000 0x00000000 0x00007ff8>;
-			interrupts-extended = <
-				&cpu92_intc 7
-				&cpu93_intc 7
-				&cpu94_intc 7
-				&cpu95_intc 7
-				>;
-		};
-
-		clint_mtimer24: clint-mtimer@70ac180000 {
-			compatible = "thead,c900-clint-mtimer";
-			reg = <0x00000070 0xac180000 0x00000000 0x00007ff8>;
-			interrupts-extended = <
-				&cpu96_intc 7
-				&cpu97_intc 7
-				&cpu98_intc 7
-				&cpu99_intc 7
-				>;
-		};
-
-		clint_mtimer25: clint-mtimer@70ac190000 {
-			compatible = "thead,c900-clint-mtimer";
-			reg = <0x00000070 0xac190000 0x00000000 0x00007ff8>;
-			interrupts-extended = <
-				&cpu100_intc 7
-				&cpu101_intc 7
-				&cpu102_intc 7
-				&cpu103_intc 7
-				>;
-		};
-
-		clint_mtimer26: clint-mtimer@70ac1a0000 {
-			compatible = "thead,c900-clint-mtimer";
-			reg = <0x00000070 0xac1a0000 0x00000000 0x00007ff8>;
-			interrupts-extended = <
-				&cpu104_intc 7
-				&cpu105_intc 7
-				&cpu106_intc 7
-				&cpu107_intc 7
-				>;
-		};
-
-		clint_mtimer27: clint-mtimer@70ac1b0000 {
-			compatible = "thead,c900-clint-mtimer";
-			reg = <0x00000070 0xac1b0000 0x00000000 0x00007ff8>;
-			interrupts-extended = <
-				&cpu108_intc 7
-				&cpu109_intc 7
-				&cpu110_intc 7
-				&cpu111_intc 7
-				>;
-		};
-
-		clint_mtimer28: clint-mtimer@70ac1c0000 {
-			compatible = "thead,c900-clint-mtimer";
-			reg = <0x00000070 0xac1c0000 0x00000000 0x00007ff8>;
-			interrupts-extended = <
-				&cpu112_intc 7
-				&cpu113_intc 7
-				&cpu114_intc 7
-				&cpu115_intc 7
-				>;
-		};
-
-		clint_mtimer29: clint-mtimer@70ac1d0000 {
-			compatible = "thead,c900-clint-mtimer";
-			reg = <0x00000070 0xac1d0000 0x00000000 0x00007ff8>;
-			interrupts-extended = <
-				&cpu116_intc 7
-				&cpu117_intc 7
-				&cpu118_intc 7
-				&cpu119_intc 7
-				>;
-		};
-
-		clint_mtimer30: clint-mtimer@70ac1e0000 {
-			compatible = "thead,c900-clint-mtimer";
-			reg = <0x00000070 0xac1e0000 0x00000000 0x00007ff8>;
-			interrupts-extended = <
-				&cpu120_intc 7
-				&cpu121_intc 7
-				&cpu122_intc 7
-				&cpu123_intc 7
-				>;
-		};
-
-		clint_mtimer31: clint-mtimer@70ac1f0000 {
-			compatible = "thead,c900-clint-mtimer";
-			reg = <0x00000070 0xac1f0000 0x00000000 0x00007ff8>;
-			interrupts-extended = <
-				&cpu124_intc 7
-				&cpu125_intc 7
-				&cpu126_intc 7
-				&cpu127_intc 7
-				>;
+		/delete-node/ clint-mtimer@70ac000000;
+		/delete-node/ clint-mtimer@70ac010000;
+		/delete-node/ clint-mtimer@70ac020000;
+		/delete-node/ clint-mtimer@70ac030000;
+		/delete-node/ clint-mtimer@70ac040000;
+		/delete-node/ clint-mtimer@70ac050000;
+		/delete-node/ clint-mtimer@70ac060000;
+		/delete-node/ clint-mtimer@70ac070000;
+		/delete-node/ clint-mtimer@70ac080000;
+		/delete-node/ clint-mtimer@70ac090000;
+		/delete-node/ clint-mtimer@70ac0a0000;
+		/delete-node/ clint-mtimer@70ac0b0000;
+		/delete-node/ clint-mtimer@70ac0c0000;
+		/delete-node/ clint-mtimer@70ac0d0000;
+		/delete-node/ clint-mtimer@70ac0e0000;
+		/delete-node/ clint-mtimer@70ac0f0000;
+		sg2042_global_mtimer: sg2042-global-mtimer@70300101c0 {
+		      compatible = "sophgo,sg2042-global-mtimer";
+		      reg = <	0x00000070 0x300101c0 0x00000000 0x00000008
+				0x00000070 0xac000000 0x00000000 0x00200000>;
+		      clock-frequency = <50000000 50000000>;
 		};
 #endif
 
