--- a/arch/riscv/configs/sophgo_mango_fedora_defconfig
+++ b/arch/riscv/configs/sophgo_mango_fedora_defconfig
@@ -77,7 +77,6 @@ CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_UNLOAD_TAINT_TRACKING=y
 CONFIG_MODVERSIONS=y
 CONFIG_MODULE_SRCVERSION_ALL=y
-CONFIG_MODULE_SIG_SHA512=y
 CONFIG_MODULE_COMPRESS_GZIP=y
 CONFIG_MODPROBE_PATH="/usr/sbin/modprobe"
 CONFIG_BLK_DEV_ZONED=y
@@ -112,7 +111,6 @@ CONFIG_BINFMT_FLAT_OLD=y
 CONFIG_BINFMT_ZFLAT=y
 CONFIG_BINFMT_MISC=y
 CONFIG_ZSWAP=y
-CONFIG_Z3FOLD=y
 CONFIG_ZSMALLOC=y
 # CONFIG_SLAB_MERGE_DEFAULT is not set
 CONFIG_SLAB_FREELIST_RANDOM=y
@@ -592,7 +590,6 @@ CONFIG_BT_BNEP_MC_FILTER=y
 CONFIG_BT_BNEP_PROTO_FILTER=y
 CONFIG_BT_CMTP=m
 CONFIG_BT_HIDP=m
-CONFIG_BT_HS=y
 CONFIG_BT_6LOWPAN=m
 CONFIG_BT_LEDS=y
 CONFIG_BT_MSFTEXT=y
@@ -2894,6 +2891,7 @@ CONFIG_RTC_DRV_DS1685_FAMILY=m
 CONFIG_RTC_DRV_DS1742=m
 CONFIG_RTC_DRV_DS2404=m
 CONFIG_RTC_DRV_DA9063=m
+CONFIG_RTC_DRV_EFI=y
 CONFIG_RTC_DRV_STK17TA8=m
 CONFIG_RTC_DRV_M48T35=m
 CONFIG_RTC_DRV_M48T59=m
