--- a/arch/riscv/configs/sophgo_mango_openeuler_defconfig
+++ b/arch/riscv/configs/sophgo_mango_openeuler_defconfig
@@ -60,7 +60,6 @@ CONFIG_NUMA=y
 CONFIG_NODES_SHIFT=3
 # CONFIG_RISCV_ISA_SVNAPOT is not set
 # CONFIG_RISCV_ISA_SVPBMT is not set
-CONFIG_RISCV_ISA_V=y
 # CONFIG_RISCV_ISA_ZICBOM is not set
 # CONFIG_RISCV_ISA_ZICBOZ is not set
 CONFIG_HZ_100=y
@@ -2894,6 +2893,7 @@ CONFIG_RTC_DRV_DS1685_FAMILY=m
 CONFIG_RTC_DRV_DS1742=m
 CONFIG_RTC_DRV_DS2404=m
 CONFIG_RTC_DRV_DA9063=m
+CONFIG_RTC_DRV_EFI=y
 CONFIG_RTC_DRV_STK17TA8=m
 CONFIG_RTC_DRV_M48T35=m
 CONFIG_RTC_DRV_M48T59=m
