Update openEuler and ubuntu kernel config
For openEuler and ubuntu, enable
MEMORY_HOTPLUG
MEMORY_HOTREMOVE
ZONE_DEVICE
PCI_P2PDMA

For openEuler only, enable
SPARSEMEM_VMEMMAP

Signed-off-by: Chao Wei <chao.wei@sophgo.com>

--- a/arch/riscv/configs/sophgo_sg2044_ubuntu_defconfig
+++ b/arch/riscv/configs/sophgo_sg2044_ubuntu_defconfig
@@ -119,6 +119,8 @@ CONFIG_ZSWAP=y
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
 # CONFIG_COMPAT_BRK is not set
+CONFIG_MEMORY_HOTPLUG=y
+CONFIG_MEMORY_HOTREMOVE=y
 CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=65536
 CONFIG_TRANSPARENT_HUGEPAGE=y
@@ -127,6 +129,7 @@ CONFIG_CMA=y
 CONFIG_CMA_SYSFS=y
 CONFIG_CMA_AREAS=7
 CONFIG_IDLE_PAGE_TRACKING=y
+CONFIG_ZONE_DEVICE=y
 CONFIG_ANON_VMA_NAME=y
 CONFIG_USERFAULTFD=y
 CONFIG_LRU_GEN=y
@@ -668,6 +671,7 @@ CONFIG_PCI_STUB=m
 CONFIG_PCI_PF_STUB=m
 CONFIG_PCI_PRI=y
 CONFIG_PCI_PASID=y
+CONFIG_PCI_P2PDMA=y
 CONFIG_HOTPLUG_PCI_CPCI=y
 CONFIG_HOTPLUG_PCI_SHPC=y
 CONFIG_PCI_FTPCI100=y
