--- a/arch/riscv/configs/sophgo_sg2044_openeuler_defconfig
+++ b/arch/riscv/configs/sophgo_sg2044_openeuler_defconfig
@@ -115,7 +115,8 @@ CONFIG_SLAB_FREELIST_HARDENED=y
 CONFIG_SHUFFLE_PAGE_ALLOCATOR=y
 # CONFIG_COMPAT_BRK is not set
 CONFIG_SPARSEMEM_MANUAL=y
-# CONFIG_SPARSEMEM_VMEMMAP is not set
+CONFIG_MEMORY_HOTPLUG=y
+CONFIG_MEMORY_HOTREMOVE=y
 CONFIG_KSM=y
 CONFIG_TRANSPARENT_HUGEPAGE=y
 CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
@@ -123,6 +124,7 @@ CONFIG_CMA_DEBUGFS=y
 CONFIG_CMA_SYSFS=y
 CONFIG_CMA_AREAS=19
 CONFIG_IDLE_PAGE_TRACKING=y
+CONFIG_ZONE_DEVICE=y
 CONFIG_USERFAULTFD=y
 CONFIG_DAMON=y
 CONFIG_DAMON_VADDR=y
@@ -655,6 +657,7 @@ CONFIG_PCI_STUB=y
 CONFIG_PCI_PF_STUB=m
 CONFIG_PCI_PRI=y
 CONFIG_PCI_PASID=y
+CONFIG_PCI_P2PDMA=y
 CONFIG_HOTPLUG_PCI_CPCI=y
 CONFIG_HOTPLUG_PCI_SHPC=y
 CONFIG_PCI_FTPCI100=y
