SG2044: Update defconfig, enable DEVICE_PRIVATE
Signed-off-by: Chao Wei <chao.wei@sophgo.com>

--- a/arch/riscv/configs/sophgo_sg2044_debian_defconfig
+++ b/arch/riscv/configs/sophgo_sg2044_debian_defconfig
@@ -99,6 +99,7 @@ CONFIG_KSM=y
 CONFIG_TRANSPARENT_HUGEPAGE=y
 CONFIG_DEFERRED_STRUCT_PAGE_INIT=y
 CONFIG_ZONE_DEVICE=y
+CONFIG_DEVICE_PRIVATE=y
 CONFIG_USERFAULTFD=y
 CONFIG_LRU_GEN=y
 CONFIG_LRU_GEN_ENABLED=y
@@ -607,6 +608,7 @@ CONFIG_PCI_REALLOC_ENABLE_AUTO=y
 CONFIG_PCI_STUB=m
 CONFIG_PCI_PF_STUB=m
 CONFIG_PCI_IOV=y
+CONFIG_PCI_P2PDMA=y
 CONFIG_PCI_HOST_GENERIC=y
 CONFIG_PCIE_XILINX=y
 CONFIG_PCIE_DW_SOPHGO=y
@@ -2695,11 +2697,6 @@ CONFIG_CRYPTO_USER_API_SKCIPHER=m
 CONFIG_CRYPTO_USER_API_RNG=m
 CONFIG_CRYPTO_USER_API_AEAD=m
 # CONFIG_CRYPTO_USER_API_ENABLE_OBSOLETE is not set
-CONFIG_CRYPTO_AES_RISCV64=m
-CONFIG_CRYPTO_CHACHA_RISCV64=m
-CONFIG_CRYPTO_GHASH_RISCV64=m
-CONFIG_CRYPTO_SHA256_RISCV64=m
-CONFIG_CRYPTO_SHA512_RISCV64=m
 CONFIG_CRYPTO_DEV_CHELSIO=m
 CONFIG_CRYPTO_DEV_VIRTIO=m
 CONFIG_PKCS8_PRIVATE_KEY_PARSER=m
