--- a/arch/riscv/configs/sophgo_sg2044_openeuler_defconfig
+++ b/arch/riscv/configs/sophgo_sg2044_openeuler_defconfig
@@ -125,6 +125,7 @@ CONFIG_CMA_SYSFS=y
 CONFIG_CMA_AREAS=19
 CONFIG_IDLE_PAGE_TRACKING=y
 CONFIG_ZONE_DEVICE=y
+CONFIG_DEVICE_PRIVATE=y
 CONFIG_USERFAULTFD=y
 CONFIG_DAMON=y
 CONFIG_DAMON_VADDR=y
