--- a/arch/riscv/configs/sophgo_mango_openeuler_defconfig
+++ b/arch/riscv/configs/sophgo_mango_openeuler_defconfig
@@ -3449,6 +3449,9 @@ CONFIG_CONSOLE_LOGLEVEL_QUIET=3
 CONFIG_BOOT_PRINTK_DELAY=y
 CONFIG_DYNAMIC_DEBUG=y
 # CONFIG_DEBUG_MISC is not set
+CONFIG_DEBUG_INFO_DWARF5=y
+CONFIG_DEBUG_INFO_BTF=y
+CONFIG_GDB_SCRIPTS=y
 CONFIG_STRIP_ASM_SYMS=y
 CONFIG_HEADERS_INSTALL=y
 CONFIG_MAGIC_SYSRQ_DEFAULT_ENABLE=0x0
