configs: Open NUMA option in openEuler defconfig
Signed-off-by: chunzhi.lin <chunzhi.lin@sophgo.com>

--- a/arch/riscv/configs/sophgo_sg2044_openeuler_defconfig
+++ b/arch/riscv/configs/sophgo_sg2044_openeuler_defconfig
@@ -57,6 +57,7 @@ CONFIG_ARCH_THEAD=y
 # CONFIG_ERRATA_THEAD_CMO is not set
 # CONFIG_ERRATA_THEAD_PMU is not set
 CONFIG_SMP=y
+CONFIG_NUMA=y
 CONFIG_RISCV_EMULATED_UNALIGNED_ACCESS=y
 CONFIG_HZ_100=y
 CONFIG_RISCV_BOOT_SPINWAIT=y
@@ -112,9 +113,7 @@ CONFIG_ZSWAP=y
 # CONFIG_SLAB_MERGE_DEFAULT is not set
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
-CONFIG_SHUFFLE_PAGE_ALLOCATOR=y
 # CONFIG_COMPAT_BRK is not set
-CONFIG_SPARSEMEM_MANUAL=y
 CONFIG_MEMORY_HOTPLUG=y
 CONFIG_MEMORY_HOTREMOVE=y
 CONFIG_KSM=y
